--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>A whale of a greeting</title>
-    <!-->Add smt here to fix the trademark ! </!-->
+    <!-- Add smt here to fix the trademark ! -->
   </head>
   <body>
     <h1>Hello, world</h1>
